# DelayCrusher

./: .gitignore  CMakeLists.txt  README.md  bump_version.sh
.github/workflows/: branch-build.yml  build.yml  release-build.yml  release.yml
include/: BitCrusher.h  BoxMullerNoise.h  Delay.h  PluginEditor.h  PluginProcessor.h  ProcessorParam.h
include/components/: BitCrusherUI.h  ColorPalette.h  DelayUI.h  Dial.h  EditorGroup.h
include/concepts/: NoiseGenType.h
include/processors/: BitCrusher.h  BoxMullerNoise.h  Delay.h  SynchronizedProcessor.h
lib/: BitCrusher.h  BoxMullerNoise.h
lib/concepts/: NoiseGenType.h
scripts/: build-and-launch-ableton.bat  build-and-launch-ableton.sh  bump-version.bat  bump-version.sh
src/: BoxMullerNoise.cpp  Delay.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/: BitCrusherUI.cpp  ColorPalette.cpp  DelayUI.cpp  Dial.cpp  EditorGroup.cpp
src/processors/: BitCrusher.cpp  BoxMullerNoise.cpp  Delay.cpp
test/: TestBitCrusher.cpp  TestBoxMullerNoise.cpp  TestDelay.cpp  TestPluginProcessor.cpp  TestProcessorParam.cpp
test/utils/: ConstNoise.cpp  ConstNoise.h  MockAudioProcessor.h  TestNoise.cpp  TestNoise.h
